<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_community"
            android:title="@string/community" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/friends" />
    </group>

    <item android:title="@string/manage">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
